# avr-car

./: .gitignore  Cargo.toml  README.md  article.md  flash-it.sh  flash_and_show.sh
rustcar/: index.md
src/: main.rs  main_radar.rs  motors.rs  sensor.rs  servo.rs
