[package]
name = "avr-example"
version = "0.1.0"
authors = ["dajamante <aimaiga2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
# The `leonardo-panic` example shows a more elaborate version.
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "1.0.0"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
